# ESPaperPlay

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  README_EN.md  sdkconfig  sdkconfig.old
components/espressif__esp_lcd_ssd1681/: esp_lcd_panel_ssd1681.c
components/espressif__esp_lcd_ssd1681/include/: esp_lcd_panel_ssd1681.h
components/hayschan__buzzer/: .component_hash  .gitignore  .gitmodules  CMakeLists.txt  buzzer.c  idf_component.yml
components/hayschan__buzzer/example/: CMakeLists.txt
components/hayschan__buzzer/example/main/: CMakeLists.txt  buzzer_example.c
components/hayschan__buzzer/include/: buzzer.h
components/hayschan__buzzer/test_apps/main/: CMakeLists.txt
components/lvgl__lvgl/src/osal/: lv_freertos.c
components/ningzixi__weather/: .component_hash  CHECKSUMS.json  CMakeLists.txt  LICENSE  README.md  README_EN.md  idf_component.yml  weather.c
components/ningzixi__weather/include/: weather.h
hardware/: 工程设计_桌面小屏幕.eprj
main/: CMakeLists.txt  idf_component.yml  main.c
main/include/apps/: weather.h  yiyan.h
main/include/display/: display.h  epaper_driver.h  ssd1681_waveshare_1in54_lut.h
main/include/hal/: button.h  config_manager.h  power_save.h  sys_config.h
main/include/lvgl/: lvgl_init.h
main/include/network/: tcpserver.h  wifi_ctrl.h
main/include/sntp/: date_update.h  sntp.h
main/include/touch/: i2c_ctp_ftxx06_xx36.h  touch.h
main/src/apps/: weather.c  yiyan.c
main/src/display/: epaper_driver.c
main/src/hal/: button.c  config_manager.c  power_save.c
main/src/lvgl/: lvgl_init.c
main/src/network/: tcpserver.c  wifi_ctrl.c  yiyan.c
main/src/sntp/: date_update.c  sntp.c
main/src/touch/: gpioX.c  i2c_config.c  i2c_ctp_ftxx06_xx36.c  touch.c
ui/: actions.c  actions.h  eez-flow.cpp  eez-flow.h  fonts.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui.h  ui_font_siyuanheiti_14.c  ui_image_100.c  ui_image_1003.c  ui_image_1007.c  ui_image_1012.c  ui_image_1014.c  ui_image_1015.c  ui_image_1018.c  ui_image_1019.c  ui_image_1020.c  ui_image_1026.c  ui_image_1027.c  ui_image_1028.c  ui_image_1029.c  ui_image_1031.c  ui_image_1033.c  ui_image_1036.c  ui_image_1038.c  ui_image_1039.c  ui_image_1040.c  ui_image_1043.c  ui_image_1044.c  ui_image_1046.c  ui_image_1048.c  ui_image_1049.c  ui_image_1052.c  ui_image_1053.c  (+180 more)
ui/images/: ui_image_1001.c  ui_image_1002.c  ui_image_1004.c  ui_image_1005.c  ui_image_1006.c  ui_image_1008.c  ui_image_1009.c  ui_image_101.c  ui_image_1010.c  ui_image_1011.c  ui_image_1013.c  ui_image_1016.c  ui_image_1017.c  ui_image_102.c  ui_image_1021.c  ui_image_1022.c  ui_image_1023.c  ui_image_1024.c  ui_image_1025.c  ui_image_103.c  ui_image_1030.c  ui_image_1032.c  ui_image_1034.c  ui_image_1035.c  ui_image_1037.c  ui_image_104.c  ui_image_1041.c  ui_image_1042.c  ui_image_1045.c  ui_image_1047.c  ui_image_1050.c  ui_image_1051.c  ui_image_1054.c  ui_image_1057.c  ui_image_1061.c  ui_image_1063.c  ui_image_1068.c  ui_image_1069.c  ui_image_1071.c  ui_image_1077.c  (+200 more)
